Add new map elements and update maps

--- a/tileworld.css
+++ b/tileworld.css
@@ -25,8 +25,8 @@
 
 #player{
     position: absolute;            
-    left: 0px;
-    top: 0px;
+    left: 25%;
+    top: 25%;
     height: 49px;
     width: 32px;
     background-image: url("images/player.png");
