--- a/naContae.css
+++ b/naContae.css
@@ -165,6 +165,29 @@ button
 }
 
 
+#imreoirLvL {
+  position:relative;
+ display:none;
+ top:-211px;
+  left:-10%;
+  height: 60px;
+  width: 60px;
+  border-radius: 60px;
+ background-color: green;
+ z-index:75;
+}
+#imreoirLvR {
+    position:relative;
+  display:none;
+  top:-211px;
+  left: 94%;
+  height: 60px;
+  width: 60px;
+  border-radius: 60px;
+  background-color:green;
+  z-index:75;
+}
+
 #countyBtnLeft {
   position:relative;
   display:none;
@@ -222,6 +245,8 @@ button
 }
 
 #imreoir{
+
+
 
     position:absolute;
     top:-190px;
@@ -342,6 +367,17 @@ padding-left: 40px;
     bottom: 6px;
     left:4px;
     z-index:10;
+}
+
+#imreoirWLv{
+    opacity: 0;
+    position:relative;
+    top:-221px;
+    left:35%;
+    height:156px;
+    width:175px;
+    z-index:156;
+    background-image:url("../../images/imreoir5.png");
 }
 #countyMain {
     position:absolute;
