--- a/contaePages/tileworld.css
+++ b/contaePages/tileworld.css
@@ -1,7 +1,109 @@
-* {
-    margin: 0 0;
-    padding: 0 0;
+
+/****naContae.css******/
+
+@font-face 
+{
+  font-family: INFO56_0;
+  src: url("../../../fonts/INFO56_0.ttf");
 }
+
+
+@font-face 
+{
+  font-family: computer_pixel-7;
+  src: url("../../../fonts/computer_pixel-7.ttf");
+}
+
+html
+{
+  font-family: computer_pixel-7;
+  color: #fff;  
+  font-size: 16px;
+  padding: 0px;
+  margin: 0px;
+  background-image:url('../../../images/bg.png');
+ transition: 1s background-image ease-out;
+}
+.parent {
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+}
+.item{
+
+}
+
+
+
+h1{
+text-align: center;
+font-family:computer_pixel-7;
+font-size: 80px;
+padding-bottom:0px;
+  padding-top: 20px;
+  font-weight: normal;
+  margin-bottom:0px ;
+  margin-top:0px;
+
+
+}
+
+{
+  font-size: 14px;
+}
+
+
+#output{
+  left:580px;
+  top:-418px;
+  position:relative;
+  text-align: center;
+  color:#730a0a;
+  margin: 0px auto;
+  font-size: 90px;
+ z-index: 90;  
+}
+
+
+#bearla{
+    position:absolute;
+    color:black;
+    font-size: 36px;
+    text-align:center;
+    top: 134px;
+    left:-41px;
+    width: 115px;
+    z-index:32;
+    line-height: 27px;
+    word-spacing:-1px;
+}
+
+
+#shield-holder{
+    position:absolute;
+    width:257px;
+    height:420px;
+    background-image:url("../../../images/dealbh.png");
+    bottom: 6px;
+    left:4px;
+    z-index:10;
+}
+#badge{
+    position:absolute;
+    top:90px;
+    left:158px;
+    background:url("../../../images/badges.png")0 0;
+    z-index: 20;
+    opacity:1;
+    width:80px;
+    height:80px;
+}
+
+
+
+
+/******MapCSS*******/
+
 #mapdata {
     display: none;
 }
@@ -18,19 +120,21 @@
 .tile {
     width:32px; 
     height:32px;
-    background-image: url("images/tileset2.png");
+    background-image: url("../../../images/tileset2.png");
     position: absolute;
 
 }
 #grid {
     position: absolute;
+    left:10px;
+    top:10px;
 }
 
 #player{
     position: absolute;            
     height: 49px;
     width: 32px;
-    background-image: url("images/player.png");
+    background-image: url("../../../images/player.png");
     z-index: 50;
 }
 #inventory{
@@ -38,3 +142,26 @@
 #inventory>*{
     position: absolute;
 }
+
+
+#left-panel
+{
+  margin:20px;
+  width: 350px;
+  height: 423px;
+  position: relative;
+  background-image: url("../../../images/bg2.png");
+  background-repeat: no-repeat;
+  border:5px solid gray;
+  
+}
+
+#middle-panel{
+    left:0px;
+    top:0px;
+padding-right: 20px;
+
+padding-left: 40px;
+}
+
+
