--- a/contaePages/tileworld.css
+++ b/contaePages/tileworld.css
@@ -71,13 +71,14 @@ padding-bottom:0px;
 
 
 #output{
-  left:580px;
+ width:440px;
+ left:580px;
   top:-573px;
   position:relative;
-  text-align: center;
+  text-align:left;
   color:#730a0a;
   margin: 0px auto;
-  font-size: 90px;
+  font-size: 80px;
  z-index: 90;  
 }
 
