--- a/naContae.css
+++ b/naContae.css
@@ -31,6 +31,34 @@ input,textarea{
 
 }
 
+button
+{
+  background-color: #505050;
+  position: absolute;
+  top:491px;
+  left: 163px;
+  height: 70px;
+  width: 120px;
+  
+  font-family: computer_pixel-7  ;
+  font-size: 50px;
+  color: #fff;
+  border: 1px solid #000;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+
+/*	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;	
+
+	-webkit-box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
+	box-shadow: 3px 3px 5px rgba(0,0,0,0.4);
+*/	
+}
+
 #langLevel{
 top:400px;
 left:0px;
@@ -38,18 +66,32 @@ left:0px;
 }
 /*flex-boxes*/
 
-.parent
-{
-    display: flex;
-    flex-direction:row;
-    align-content:center;
-    justify-content: space-between;
-}
-
 .item {
 
 }
 /************/
+
+/*PANELS*/
+
+#left-panel
+{
+  margin:20px;
+  width: 350px;
+  height: 423px;
+  position: relative;
+  background-image: url("../../images/bg2.png");
+  background-repeat: no-repeat;
+  border:5px solid gray;
+  
+}
+
+#middle-panel{
+
+    margin-left:360px;
+    min-width:700px;
+padding-right: 0px;
+padding-left: 100px;
+}
 
 span.withTitle {
     font-size: 30px;
@@ -84,19 +126,23 @@ h1
 
 
 #output{
-  text-align: center;
-  color:#730a0a;
-  margin: 0px auto;
-  font-size: 90px;
- z-index: 90;  
-  }
+    top:-39px;
+    height:0px;
+    line-height:0px;
+    position:relative;
+    text-align: center;
+    color:#730a0a;
+    margin-left: 0px auto;
+    font-size: 85px;
+ }
 #output2
 {
- font-family: INFO56_0;
-  margin: 0px auto;
-  margin-top: 16px;
-  font-size: 39px;
-  z-index:100;
+    position:relative;
+    top:-68px;
+    font-family: INFO56_0;
+    margin: 0px auto;
+    margin-top: 16px;
+    font-size: 39px;
 }
 
 #mainText{
@@ -104,6 +150,45 @@ h1
     top:3px;
     left: 450px;
     width: 800px;
+}
+
+#inputName{
+margin:20px;
+position:relative;
+display:inline;
+left:0px;
+top:0px;
+width: 300px;
+height:50px;
+background:rgba(5,5,5,0.3);
+
+}
+
+#inputLabel{
+margin:20px;
+position:relative;
+    display:inline;
+    width:300px;
+    text-align:center;
+    font-family:INFO56_0;
+    font-size:40px;
+    top:500px;
+    left:0px;
+
+}
+
+#ainmBtn{
+margin:20px;
+position:relative;
+display:inline;
+background-color: #207720;
+color:#ffe959;
+font-size:46;
+text-align:center;
+top:0px;
+left:0px;
+
+
 }
 
 
@@ -114,34 +199,6 @@ img
   margin-bottom: 20px;
 }
 /*BUTTONS*/
-
-button
-{
-  background-color: #505050;
-  position: absolute;
-  top:491px;
-  left: 163px;
-  height: 70px;
-  width: 120px;
-  
-  font-family: computer_pixel-7  ;
-  font-size: 50px;
-  color: #fff;
-  border: 1px solid #000;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-
-/*	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;	
-
-	-webkit-box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
-	-moz-box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
-	box-shadow: 3px 3px 5px rgba(0,0,0,0.4);
-*/	
-}
 #fwdBtn{
     animation: delay-fade-in 3s;
 	
@@ -195,8 +252,8 @@ background-color: #207720;
 color:#ffe959;
 font-size:46;
 text-align:center;
-top:226px;
-left:197px;
+top:-130px;
+left:118px;
 
 
 
@@ -244,7 +301,7 @@ left:197px;
 {
   position: relative;
   bottom: -250px;
-  left: 0px;
+  left: 251px;
   width: 260px;
   height:50px;
   padding: 2px 2px 2px 5px;
@@ -257,19 +314,6 @@ left:197px;
 
 }
 
-#imreoir{
-
-
-
-    position:absolute;
-    top:-190px;
-    left:45%;
-    height:156px;
-    width:111px;
-    z-index:55;
-    background-image:url("../../images/imreoir.gif");
-
-}
 /*
 #pName{
     display:none;
@@ -285,22 +329,19 @@ left:197px;
     border: 5px solid gray;
 }
 */
-#inputName{
-position:absolute;
-left:1px;
-top:-56px;
-width: 300px;
-height:50px;
-background:rgba(5,5,5,0.3);
 
-}
 #joinTeam{
   display:none;
   background-color: #207720;
-  top:40px;
-  left:115px;
+  top:-43px;
+  left:118px;
 	
 }
+
+#joinTeam:hover{
+    background-color:#ff6800;
+}
+
 ::placeholder{
    color:green;
   font-size: 35px; 
@@ -309,62 +350,6 @@ background:rgba(5,5,5,0.3);
 }
 
 
-#inputLabel{
-    position:relative;
-    width:300px;
-    text-align:left;
-    font-family:INFO56_0;
-    font-size:40px;
-    top:-167px;
-    left:-5px;
-
-}
-#ainmBtn{
-position:absolute;
-background-color: #207720;
-color:#ffe959;
-font-size:46;
-text-align:center;
-top:32px;
-left:197px;
-
-
-}
-
-
-
-/*PANELS*/
-
-#left-panel
-{
-  margin:20px;
-  width: 350px;
-  height: 423px;
-  position: relative;
-  background-image: url("../../images/bg2.png");
-  background-repeat: no-repeat;
-  border:5px solid gray;
-  
-}
-
-#middle-panel{
-padding-right: 20px;
-padding-left: 40px;
-}
-
-#right-panel
-{
-    display: none;
-    right:40px;
-    margin-right:15px;
-    margin-top:15px;
-    width:350px;
-    height:423px;
-    position: absolute;
-   /* background-image: url("../images/bg2.png");*/
-    background-repeat: no-repeat;
-    
-}
 
 #location{
     position: absolute;
@@ -385,8 +370,8 @@ padding-left: 40px;
 #imreoirWLv{
     opacity: 0;
     position:relative;
-    top:-221px;
-    left:35%;
+    top:-274px;
+    left:34%;
     height:156px;
     width:175px;
     z-index:156;
@@ -417,10 +402,10 @@ padding-left: 40px;
     position:relative;
     text-align: left;
     width: 601px;
-    left:px;
+    left:200px;
     padding-left:0px; 
     font-family:INFO56_0;
-    bottom: 322px;
+    bottom: -100px;
     font-size:40px;
 }
 
