--- a/contaePages/tileworld.css
+++ b/contaePages/tileworld.css
@@ -36,6 +36,22 @@ border:3px solid white;
 .item{
 
 }
+/*Show player's team badge*/
+#badgeSmall{
+   position:absolute;
+    top:90px;
+    left:158px;
+    background:url("../../../images/badges_small.png")0 0;
+    z-index: 20;
+    opacity:1;
+    width:20px;
+    height:20px;
+    background-position-x:0px
+
+
+
+}
+
 
 #mapFrame {
  position:absolute;
