Place item locations in geographcally correct position on naContae10.html (Co. Cork). Tweek map hill-tiles

--- a/contaePages/tileworld.css
+++ b/contaePages/tileworld.css
@@ -118,6 +118,7 @@ padding-bottom:0px;
 }
 
 #locationDetail{
+    visibility:hidden;
     position:relative;
 background-image:url("../../../images/locationDetails/corkDetails.png");
 top:86px;
