--- a/contaePages/tileworld.css
+++ b/contaePages/tileworld.css
@@ -117,8 +117,18 @@ padding-bottom:0px;
     word-spacing:-1px;
 }
 
+#deetsFrame{
+    position:relative;
+background-image:url("../../../images/deetsFrame.png");
+top:-240px;
+left:-25px;
+width:350px;
+height:352px;
+opacity:1;
+ background-repeat:no-repeat;  
+}
 #locationDetail{
-    visibility:hidden;
+   visibility:hidden;
     position:relative;
 background-image:url("../../../images/locationDetails/corkDetails.png");
 top:86px;
@@ -202,7 +212,7 @@ height: 49px;
  width: 200px;
   height: 423px;
   position: relative;
-  
+ z-index:300; 
 }
 
 #middle-panel{
@@ -213,4 +223,8 @@ padding-right: 20px;
 padding-left: 40px;
 }
 
+@keyframes fade-out{
+    0%{opacity:1;}
+    100%{opacity:0;}
 
+}
