--- a/naContae.css
+++ b/naContae.css
@@ -139,10 +139,12 @@ h1
 {
     position:relative;
     top:-68px;
+    left:0px;
     font-family: INFO56_0;
     margin: 0px auto;
     margin-top: 16px;
     font-size: 39px;
+
 }
 
 #mainText{
@@ -156,12 +158,12 @@ h1
 margin:20px;
 position:relative;
 display:inline;
-left:100px;
+left:22px;
 top:80px;
 width: 300px;
 height:50px;
-background:rgba(5,5,5,0.3);
-
+background:rgba(5,5,5,.85);
+  opacity:1;
 }
 
 #inputLabel{
@@ -172,9 +174,10 @@ position:relative;
     text-align:center;
     font-family:INFO56_0;
     font-size:40px;
-    top:90px;
-    left:100px;
+    top:110px;
+    left:24px;
 
+  opacity:1;
 }
 
 #ainmBtn{
@@ -185,9 +188,10 @@ background-color: #207720;
 color:#ffe959;
 font-size:46;
 text-align:center;
-top:15px;
-left:296px;
+top:42px;
+left:216px;
 
+  opacity:1;
 
 }
 
@@ -279,7 +283,17 @@ left:27px;
   z-index:75;
 }
 
+#tidyBox1{
+  position:absolute;  
+  background-color:rgba(255,255,255,0.25);
+  width:400px;
+  border: 5px solid blue;
+  border-radius: 20px;
+  height:300px;
+  left:604px;
+  top:116px;
 
+}
 #bearla{
     position:absolute;
     color:black;
@@ -294,12 +308,23 @@ left:27px;
 }
 /*PLAYER INPUT ELEMENTS*/
 
+#portrait {
+    position:absolute;
+    margin:0px;
+    padding:0px;
+    width:111px;
+    height:156px;
+    left:141px;
+    top:-32px;
+    background-image:url("../../images/imreoir.gif");
 
+  opacity:1;
+}
 #inputElements
 { opacity:0;
   position:absolute;
-  bottom: 158px;
-  left: 471px;
+  bottom: 260px;
+  left: 561px;
   width: 260px;
   height:50px;
   padding: 2px 2px 2px 5px;
