--- a/naContae.css
+++ b/naContae.css
@@ -43,7 +43,6 @@ button
   font-family: computer_pixel-7  ;
   font-size: 50px;
   color: #fff;
-  border: 1px solid #000;
 
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -146,6 +145,17 @@ h1
     font-size: 39px;
 
 }
+#inputElements
+{ opacity:0;
+  position:absolute;
+  bottom: 260px;
+  left: 349px;
+  width: 260px;
+  height:50px;
+  z-index: 100;
+
+}
+
 
 #mainText{
     position:absolute;
@@ -230,7 +240,7 @@ img
   position:relative;
  display:none;
  top:150px;
-  left:52px;
+  left:242px;
   height: 60px;
   width: 60px;
   border-radius: 60px;
@@ -240,7 +250,7 @@ img
     position:relative;
   display:none;
   top:150px;
-  left: 326px;
+  left: 556px;
   height: 60px;
   width: 60px;
   border-radius: 60px;
@@ -254,8 +264,8 @@ background-color: #207720;
 color:#ffe959;
 font-size:46;
 text-align:center;
-top:-8px;
-left:189px;
+top:93px;
+left:-232px;
 
 
 
@@ -264,7 +274,7 @@ left:189px;
   position:relative;
   display:none;
   top:150px;
-  left:30px;
+  left:-138px;
   height: 60px;
   width: 60px;
   border-radius: 60px;
@@ -275,11 +285,11 @@ left:189px;
     position:relative;
   display:none;
   top:150px;
-  left:350px;
+  left:482px;
   height: 60px;
   width: 60px;
   border-radius: 60px;
-  background-color:green;
+  background-color:#034408;
   z-index:75;
 }
 
@@ -319,17 +329,6 @@ left:189px;
 
   opacity:1;
 }
-#inputElements
-{ opacity:0;
-  position:absolute;
-  bottom: 260px;
-  left: 561px;
-  width: 260px;
-  height:50px;
-  z-index: 100;
-
-}
-
 /*
 #pName{
     display:none;
@@ -350,14 +349,22 @@ left:189px;
   display:none;
   background-color: #207720;
   top:220px;
-  left:32px;
+  left:158px;
 	
+}
+
+#ainmBtn:hover{
+    background-color:#ff6800;
+}
+
+
+#levelSelect:hover{
+    background-color:#ff6800;
 }
 
 #joinTeam:hover{
     background-color:#ff6800;
 }
-
 ::placeholder{
    color:green;
   font-size: 35px; 
@@ -386,7 +393,7 @@ left:189px;
 #imreoirWLv{
     position:relative;
     top:-10px;
-    left:157px;
+    left:369px;
     height:175px;
     width:175px;
     z-index:-1;
